--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
   },
   "devDependencies": {
     "@types/gh-pages": "^3.0.0",
+    "@types/gtag.js": "^0.0.4",
     "@types/lodash": "^4.14.166",
     "@types/prettier": "^2.1.6",
     "@types/react-helmet": "^6.1.0",
