--- a/package.json
+++ b/package.json
@@ -117,5 +117,5 @@
       "prettier --write --loglevel=warn"
     ]
   },
-  "homepage": "https://wkamuy.github.io"
+  "homepage": "https://wkamuy.github.io/portfolio"
 }
